--- a/.gitignore
+++ b/.gitignore
@@ -377,3 +377,4 @@ $RECYCLE.BIN/
  
 # End of https://www.toptal.com/developers/gitignore/api/windows,linux,visualstudiocode,eclipse,c,c++,python,rust
 
+DOC/USB MIDI v2_0.pdf
