--- a/SOFT/.vscode/settings.json
+++ b/SOFT/.vscode/settings.json
@@ -7,7 +7,8 @@
         "general_types.h": "c",
         "general_macros.h": "c",
         "stm32f10x_gpio.h": "c",
-        "buttons_drv.h": "c"
+        "buttons_drv.h": "c",
+        "stdint.h": "c"
     }
 
 
