--- a/SOFT/Makefile
+++ b/SOFT/Makefile
@@ -41,7 +41,8 @@ C_SOURCES =  \
 	codebase/main_fw/hardware/mcu_hal/STM32F10x_StdPeriph_Driver/src/stm32f10x_rcc.c \
 	codebase/main_fw/hardware/mcu_hal/STM32F10x_StdPeriph_Driver/src/stm32f10x_tim.c \
 	codebase/main_fw/hardware/mcu_hal/STM32F10x_StdPeriph_Driver/src/stm32f10x_usart.c \
-	codebase/main_fw/hardware/mcu_hal/system_stm32f10x.c
+	codebase/main_fw/hardware/mcu_hal/system_stm32f10x.c \
+	codebase/main_fw/middleware/Circular_Buffer/Latest/circ_buffer.c
 
 C_INCLUDES =  \
 	-Icodebase/main_fw/application \
@@ -52,7 +53,8 @@ C_INCLUDES =  \
 	-Icodebase/main_fw/hardware/mcu_hal \
 	-Icodebase/main_fw/hardware/system \
 	-Icodebase/main_fw/hardware/CMSIS/CM3/CoreSupport \
-	-Icodebase/main_fw/hardware/mcu_hal/STM32F10x_StdPeriph_Driver/inc
+	-Icodebase/main_fw/hardware/mcu_hal/STM32F10x_StdPeriph_Driver/inc \
+	-Icodebase/main_fw/middleware/Circular_Buffer/Latest
 
 
 # ASM sources
